# slide_deduplicator

./: .gitignore  README.md  environment.yml  pyproject.toml
src/slide_deduplicator/: grouper.py  main.py  reader.py  selector.py  writer.py
tests/: test_grouper.py  test_selector.py
