[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slide-deduplicator"
version = "0.1.0"
description = "Remove incomplete animation pages from PDFs exported from PowerPoint"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pypdf"
]

[project.scripts]
slide-deduplicator = "slide_deduplicator.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
